Accessible objects with empty width and height should inherit from parent.

Bug: 756788
Change-Id: Iac4a6ae59dd322418a2f7ddf01d02802982e31b7
Reviewed-on: https://chromium-review.googlesource.com/626942
Reviewed-by: Alice Boxhall <aboxhall@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498032}
Former-commit-id: 4c9925b198332f5fbb82b3edb672ed55071f87dd